--- a/src/css/apps/admin/executequery.css
+++ b/src/css/apps/admin/executequery.css
@@ -1,15 +1,30 @@
-#AdminPortal .container.query div.page-content {
+#ExecuteQueryApp > div.body ::-webkit-scrollbar {
+  display: none;
+}
+
+#ExecuteQueryApp > div.body button {
+  outline: none;
+}
+
+#ExecuteQueryApp > div.body {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  position:relative;
+}
+
+#ExecuteQueryApp > div.body div.page-content {
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-#AdminPortal .container.query div.expressions {
+#ExecuteQueryApp > div.body div.expressions {
   max-height: 250px;
   overflow-y: scroll;
 }
 
-#AdminPortal .container.query div.expressions div.row {
+#ExecuteQueryApp > div.body div.expressions div.row {
   display: flex;
   align-items: center;
   height: 31px;
@@ -18,7 +33,7 @@
   border-bottom: var(--win-border);
 }
 
-#AdminPortal .container.query div.expressions div.row span.json-representation {
+#ExecuteQueryApp > div.body div.expressions div.row span.json-representation {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -30,33 +45,34 @@
   opacity: 0.5;
 }
 
-#AdminPortal .container.query div.expressions div.actions {
+#ExecuteQueryApp > div.body div.expressions div.actions {
   margin-left: auto;
   display: flex;
   align-items: center;
 }
 
-#AdminPortal .container.query div.expressions div.actions button {
+#ExecuteQueryApp > div.body div.expressions div.actions button {
   font-size: 16px;
   width: 31px;
   padding: 7px;
+  border: none;
   border-left: var(--win-border);
   border-radius: 0;
 }
 
-#AdminPortal .container.query div.expressions div.row p.where {
+#ExecuteQueryApp > div.body div.expressions div.row p.where {
   font-size: 14px;
   font-weight: bold;
 }
 
-#AdminPortal .container.query div.results {
+#ExecuteQueryApp > div.body div.results {
   flex-grow: 1;
   height: 0;
   flex-direction: column;
   border-top: var(--win-border);
 }
 
-#AdminPortal .container.query div.results div.action-bar {
+#ExecuteQueryApp > div.body div.results div.action-bar {
   height: 31px;
   display: flex;
   align-items: center;
@@ -65,15 +81,15 @@
   background-color: var(--button-bg);
 }
 
-#AdminPortal .container.query div.results div.table-wrapper {
+#ExecuteQueryApp > div.body div.results div.table-wrapper {
   height: calc(100% - 31px);
   overflow: scroll;
 }
 
-#AdminPortal .container.query div.results div.action-bar p.count {
+#ExecuteQueryApp > div.body div.results div.action-bar p.count {
   margin-right: auto;
 }
-#AdminPortal .container.query div.results div.truncated {
+#ExecuteQueryApp > div.body div.results div.truncated {
   height: 30px;
   padding: 0 10px;
   display: flex;
@@ -82,11 +98,11 @@
   background-color: var(--clr-red-bg);
 }
 
-#AdminPortal .container.query div.results div.truncated img {
+#ExecuteQueryApp > div.body div.results div.truncated img {
   height: 16px;
 }
 
-#AdminPortal .container.query div.selector {
+#ExecuteQueryApp > div.body div.selector {
   display: flex;
   align-items: center;
   height: 31px;
@@ -96,20 +112,20 @@
   background-color: var(--button-bg);
 }
 
-#AdminPortal .container.query div.selector p.from {
+#ExecuteQueryApp > div.body div.selector p.from {
   font-weight: bold;
   font-size: 14px;
 }
 
-#AdminPortal .container.query div.fields {
+#ExecuteQueryApp > div.body div.fields {
   display: flex;
   align-items: center;
   width: 0;
   flex-grow: 1;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-#AdminPortal .container.query div.fields label {
+#ExecuteQueryApp > div.body div.fields label {
   display: flex;
   align-items: center;
   margin-left: 10px;
@@ -117,28 +133,34 @@
   font-family: "Source Code Pro";
 }
 
-#AdminPortal .container.query input:not([type="checkbox"]),
-#AdminPortal .container.query select {
+#ExecuteQueryApp > div.body div.fields p {
+  padding: 0 10px;
+}
+
+#ExecuteQueryApp > div.body input:not([type="checkbox"]),
+#ExecuteQueryApp > div.body select {
   border-bottom: 0;
   border-top: 0;
   border-radius: 0;
   height: 30px;
+  padding: 0 10px;
 }
 
-#AdminPortal .container.query div.selector select {
+#ExecuteQueryApp > div.body div.selector select {
   background-color: var(--button-bg);
 }
 
-#AdminPortal .container.query div.selector div.actions {
+#ExecuteQueryApp > div.body div.selector div.actions {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
 
-#AdminPortal .container.query div.action-bar button,
-#AdminPortal .container.query div.selector button {
+#ExecuteQueryApp > div.body div.action-bar button,
+#ExecuteQueryApp > div.body div.selector button {
   border-radius: 0;
   height: 30px;
+  border: none;
   border-left: var(--win-border);
   display: flex;
   padding: 0 10px;
@@ -147,25 +169,25 @@
   background-color: transparent;
 }
 
-#AdminPortal .container.query div.action-bar button:hover,
-#AdminPortal .container.query div.selector button:hover {
+#ExecuteQueryApp > div.body div.action-bar button:hover,
+#ExecuteQueryApp > div.body div.selector button:hover {
   background-color: var(--button-glass-bg);
 }
-#AdminPortal .container.query div.action-bar button:active,
-#AdminPortal .container.query div.selector button:active {
+#ExecuteQueryApp > div.body div.action-bar button:active,
+#ExecuteQueryApp > div.body div.selector button:active {
   background-color: var(--button-glass-active-bg);
 }
 
-#AdminPortal .container.query div.action-bar button:disabled,
-#AdminPortal .container.query div.selector button:disabled {
+#ExecuteQueryApp > div.body div.action-bar button:disabled,
+#ExecuteQueryApp > div.body div.selector button:disabled {
   opacity: 0.2;
 }
 
-#AdminPortal .container.query div.selector button span.lucide.icon-play {
+#ExecuteQueryApp > div.body div.selector button span.lucide.icon-play {
   color: var(--clr-green-fg);
 }
 
-#AdminPortal .container.query table {
+#ExecuteQueryApp > div.body table {
   display: block;
   width: 100%;
   width: max-content;
@@ -176,42 +198,42 @@
   margin: -1px;
 }
 
-#AdminPortal .container.query table tr {
+#ExecuteQueryApp > div.body table tr {
   background-color: var(--button-bg);
   border-top: var(--win-border);
 }
 
-#AdminPortal .container.query table tr:hover td {
+#ExecuteQueryApp > div.body table tr:hover td {
   background-color: var(--button-glass-hover-bg);
 }
 
-#AdminPortal .container.query table th,
-#AdminPortal .container.query table td {
+#ExecuteQueryApp > div.body table th,
+#ExecuteQueryApp > div.body table td {
   padding: 5px 8px;
   border: var(--win-border);
   text-align: left !important;
   white-space: nowrap;
 }
 
-#AdminPortal .container.query table tr th {
+#ExecuteQueryApp > div.body table tr th {
   font-weight: bold !important;
 }
 
-#AdminPortal .container.query table tr:nth-child(2n) {
+#ExecuteQueryApp > div.body table tr:nth-child(2n) {
   background-color: var(--button-bg) 1px solid;
 }
 
-#AdminPortal .container.query div.row select:not([type="checkbox"]) + select:not([type="checkbox"]),
-#AdminPortal .container.query div.row input:not([type="checkbox"]) + select:not([type="checkbox"]),
-#AdminPortal .container.query div.row select:not([type="checkbox"]) + input:not([type="checkbox"]),
-#AdminPortal .container.query div.row input:not([type="checkbox"]) + input:not([type="checkbox"]) {
+#ExecuteQueryApp > div.body div.row select:not([type="checkbox"]) + select:not([type="checkbox"]),
+#ExecuteQueryApp > div.body div.row input:not([type="checkbox"]) + select:not([type="checkbox"]),
+#ExecuteQueryApp > div.body div.row select:not([type="checkbox"]) + input:not([type="checkbox"]),
+#ExecuteQueryApp > div.body div.row input:not([type="checkbox"]) + input:not([type="checkbox"]) {
   border-left: none !important;
 }
-#AdminPortal .container.query div.row img {
+#ExecuteQueryApp > div.body div.row img {
   height: 16px;
 }
 
-#AdminPortal .container.query div.loading-overlay {
+#ExecuteQueryApp > div.body div.loading-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -231,14 +253,13 @@
     pointer-events 0s !important;
 }
 
-#AdminPortal .container.query div.loading-overlay.show {
+#ExecuteQueryApp > div.body div.loading-overlay.show {
   opacity: 1;
   pointer-events: initial;
   z-index: 100000000;
 }
 
-
-#AdminPortal .container.query div.query-sentence {
+#ExecuteQueryApp > div.body div.query-sentence {
   padding: 15px;
   max-width: 600px;
 }
