--- a/src/css/apps/admin/executequery.css
+++ b/src/css/apps/admin/executequery.css
@@ -1,3 +1,6 @@
+@import url("./executequery/loadquery.css");
+@import url("./executequery/savequery.css");
+
 #ExecuteQueryApp > div.body ::-webkit-scrollbar {
   display: none;
 }
