--- a/src/css/apps/components/globalloadindicator.css
+++ b/src/css/apps/components/globalloadindicator.css
@@ -20,7 +20,6 @@
   align-items: center;
   min-height: 60px;
   padding: 20px;
-  padding-bottom: 0;
   gap: 15px;
   min-height: fit-content;
 }
@@ -28,6 +27,7 @@
 #GlobalLoadIndicator > div.body div.bottom {
   height: 50px;
   padding: 20px;
+  padding-top: 0;
 }
 
 #GlobalLoadIndicator > div.body div.progress-bar {
