--- a/src/css/apps/components/shortcutproperties.css
+++ b/src/css/apps/components/shortcutproperties.css
@@ -90,6 +90,8 @@
   height: 16px;
   font-size: 16px;
   background-color: transparent;
+  outline:none;
+  border-radius: 0;
 }
 #ShortcutProperties > div.body div.info-block div.type {
   min-width: fit-content;
@@ -104,12 +106,14 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  border-radius: 8px;
+  border-radius: 15px;
   background-color: var(--button-glass-bg);
   width: 100%;
   height: 51px;
   margin-top: auto;
   box-shadow: var(--secondary-box-shadow);
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 #ShortcutProperties > div.body div.actions > div {
