--- a/src/css/apps/user/advsystemsettings/dispatch.css
+++ b/src/css/apps/user/advsystemsettings/dispatch.css
@@ -27,6 +27,10 @@
 
 #AdvSystemSettings > div.body div.dispatch-clients div.list div.row div.segment.ip {
   flex-grow: 1;
+  width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #AdvSystemSettings > div.body div.dispatch-clients div.list div.row div.segment.authorized {
