--- a/src/css/apps/user/filemanager/directoryviewer.css
+++ b/src/css/apps/user/filemanager/directoryviewer.css
@@ -182,6 +182,7 @@
   z-index: 100000;
   padding-top: 15px;
   padding-bottom: 5px;
+  border-radius: 0;
 }
 
 #fileManager div.directory-viewer.loading {
