--- a/src/css/apps/user/mediaplayer/popup.css
+++ b/src/css/apps/user/mediaplayer/popup.css
@@ -1,5 +1,23 @@
 #MediaPlayer.popup {
   padding: 10px;
+  background-color: #000 !important;
+}
+
+#MediaPlayer.popup,
+#MediaPlayer.popup * {
+  --fg: #ddd !important;
+}
+
+#MediaPlayer.popup h1.title {
+  font-size: 18px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#MediaPlayer.popup p.author {
+  opacity: 0.5;
 }
 
 #MediaPlayer.popup div.file {
@@ -29,4 +47,22 @@
   justify-content: space-between;
   margin-top: 8px;
   opacity: 0.5;
+}
+
+#MediaPlayer.popup div.cover-art {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter: blur(20px);
+  opacity: 0.3;
+  scale: 1.2;
+  pointer-events: none;
+}
+#MediaPlayer.popup div.cover-art img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
