--- a/src/css/apps/core/switchserver.css
+++ b/src/css/apps/core/switchserver.css
@@ -5,6 +5,11 @@
   flex-direction: column;
 }
 
+#SwitchServer > div.body > h1 {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
 #SwitchServer > div.body div.selector {
   display: flex;
   align-items: center;
@@ -19,7 +24,7 @@
 
 #SwitchServer > div.body div.selector div.server-option button.selector {
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 10px 5px;
   background-color: transparent;
 }
 
@@ -30,6 +35,12 @@
 #SwitchServer > div.body div.selector div.server-option button.selector span.lucide {
   color: var(--accent-light);
   font-size: 48px;
+}
+
+#SwitchServer > div.body div.selector div.server-option button.selector p.name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #SwitchServer > div.body div.selector div.server-option button.selector.selected {
@@ -56,7 +67,10 @@
 
 #SwitchServer > div.body button.add-server {
   translate: 0 100px;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
+
 #SwitchServer > div.body div.connection-error {
   display: flex;
   justify-content: center;
