Fix ExecuteQuery LoadQuery scrolling

--- a/src/css/apps/admin/executequery/loadquery.css
+++ b/src/css/apps/admin/executequery/loadquery.css
@@ -8,6 +8,7 @@
   padding: 10px;
   height: 0;
   flex-grow: 1;
+  overflow-y: auto;
 }
 
 #ExecuteQueryApp #LoadQueryOverlay > div.body div.list button {
