--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,7 @@
 @import url("./infoblock.css");
 @import url("./codeeditor.css");
 @import url("./hljs.css");
+@import url("./kernellog.css");
 @import url("./state/crash.css");
 @import url("./state/desktop.css");
 @import url("./state/licensedeclined.css");
