--- a/src/css/apps/user/filemanager/addressbar.css
+++ b/src/css/apps/user/filemanager/addressbar.css
@@ -39,8 +39,8 @@
 }
 
 #fileManager div.address-bar div.path.manual-entry {
-  padding-left:8px;
-  gap: 5px
+  padding-left: 8px;
+  gap: 5px;
 }
 
 #fileManager div.address-bar div.path input {
@@ -84,6 +84,23 @@
   background-color: var(--button-glass-bg);
   height: 24px;
   border-radius: 7px;
+  width: 0;
+  max-width: fit-content;
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#fileManager div.address-bar div.path div.pill span.lucide {
+  display: block;
+  min-width: 16px !important;
+}
+
+#fileManager div.address-bar div.path div.pill span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #fileManager div.address-bar div.path div.pill.readonly-notice {
